--- a/main.css
+++ b/main.css
@@ -16,6 +16,9 @@ padding-left: 2%;
 border-radius: 50px 50px 50px 40px / 40px 40px 40px 25px;
 margin-bottom: 30px;
 }
+.AboutSection li{
+  margin-top: 5%;
+}
 .heroContent{
   width: 50%;
   height: inherit;
@@ -23,7 +26,6 @@ margin-bottom: 30px;
 
 }
 .HeroContentHead{
-  text-transform: uppercase;
   font-size: 35px;
   margin-top: 10%;
   margin-bottom: 2%;
